# ChangeLog for x11-misc/chgres
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/chgres/ChangeLog,v 1.9 2006/01/21 10:48:11 nelchael Exp $

  21 Jan 2006; Krzysiek Pawlik <nelchael@gentoo.org> chgres-0.1.ebuild:
  Fixed DEPEND for modular X.

  26 Jul 2005; David Holm <dholm@gentoo.org> chgres-0.1.ebuild:
  Added to ~ppc.

  05 Sep 2004; Sven Wegener <swegener@gentoo.org> :
  Fixed ChangeLog header.

  13 Jun 2004; Donnie Berkholz <spyderous@gentoo.org>; chgres-0.1.ebuild:
  Change x11-base/xfree dependency to virtual/x11 (#52153).

  03 Nov 2003; Abhishek Amit <abhishek@gentoo.org> metadata.xml:
  Added metadata.xml

  24 Mar 2003; Patrick Kursawe <phosphan@gentoo.org> chgres-0.1.ebuild :
  marked as stable for x86

  17 Mar 2003; Patrick Kursawe <phosphan@gentoo.org> chgres-0.1.ebuild :
  Where are my manners? Forgot the headers and the ~ *blush*

*chgres-0.1 (17 Mar 2003)

  17 Mar 2003; Patrick Kursawe <phosphan@gentoo.org> chgres-0.1.ebuild
  files/digest-chgres-0.1 ChangeLog :
  Initial import. Ebuild submitted by Henrik Johansson 
  <henrik_johansson@home.se>. This closes bug #16371.