@@ -1,30 +1,26 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/chgres/Attic/chgres-0.1.ebuild,v 1.8 2006/01/21 10:48:11 nelchael Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/chgres/Attic/chgres-0.1.ebuild,v 1.9 2006/10/22 00:11:42 omp Exp $
 
-IUSE=""
 DESCRIPTION="A very simple command line utility for changing X resolutions"
 HOMEPAGE="http://hpwww.ec-lyon.fr/~vincent/"
+SRC_URI="http://hpwww.ec-lyon.fr/~vincent/${P}.tar.gz"
+
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~ppc x86"
+IUSE=""
 
-SRC_URI="http://hpwww.ec-lyon.fr/~vincent/${P}.tar.gz"
-
-RDEPEND="|| ( (
-		x11-libs/libX11
-		x11-libs/libXxf86dga
-		x11-libs/libXext
-		x11-libs/libXxf86vm )
-	virtual/x11 )"
+RDEPEND="x11-libs/libX11
+	x11-libs/libXxf86dga
+	x11-libs/libXext
+	x11-libs/libXxf86vm"
 DEPEND="${RDEPEND}
-	|| ( (
-		x11-proto/xf86vidmodeproto
-		x11-proto/xf86dgaproto )
-	virtual/x11 )"
+	x11-proto/xf86vidmodeproto
+	x11-proto/xf86dgaproto"
 
 src_compile() {
-	emake || die
+	emake || die "emake failed"
 }
 
 src_install() {
