@@ -1,4 +1,26 @@
-MD5 82accc38c02ab754814d0873d19c48c1 ChangeLog 1349
-MD5 c1e7cf4f4f83a21c6734a497574be1a4 files/digest-xwrits-2.21 63
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+DIST xwrits-2.21.tar.gz 133755
+EBUILD xwrits-2.21.ebuild 800 RMD160 5a443c57c32e172be351ea77a9ce215870f82f44 SHA1 3f973f57feb772aebf4e342bbcb1b9ff55b8850a SHA256 99a37ed210ead4647a3b944a3b4c5f4e927a72adcc784a051659232e20d9ed0c
+MD5 9bd5f23320e49694f8523e2458be63b2 xwrits-2.21.ebuild 800
+RMD160 5a443c57c32e172be351ea77a9ce215870f82f44 xwrits-2.21.ebuild 800
+SHA256 99a37ed210ead4647a3b944a3b4c5f4e927a72adcc784a051659232e20d9ed0c xwrits-2.21.ebuild 800
+MISC ChangeLog 1509 RMD160 c7c69a47025d8f7157afe50f2ca5057b428eb743 SHA1 7d0bd885e3326ef5967b9c1780779066b4c0c192 SHA256 c6a67882fa18d88949d99d5a029a77d86690649bac1548ca4c0285c338cc81ac
+MD5 9a2f10b433af87f0936c49f3d3b070b0 ChangeLog 1509
+RMD160 c7c69a47025d8f7157afe50f2ca5057b428eb743 ChangeLog 1509
+SHA256 c6a67882fa18d88949d99d5a029a77d86690649bac1548ca4c0285c338cc81ac ChangeLog 1509
+MISC metadata.xml 166 RMD160 7b80226659bf40e97050b1ffce1858d5f20b3c60 SHA1 e6c6436c304a65b4a012a5b7be7ee264b228a645 SHA256 8e7de0a7f7c15840474de373a3ce36adcc5dd658b2e4d18366fcb63b964a0826
 MD5 cdb11033a3fa6525334cecf938961c07 metadata.xml 166
-MD5 47b82067f37f732dd4be8d66f65c0d96 xwrits-2.21.ebuild 807
+RMD160 7b80226659bf40e97050b1ffce1858d5f20b3c60 metadata.xml 166
+SHA256 8e7de0a7f7c15840474de373a3ce36adcc5dd658b2e4d18366fcb63b964a0826 metadata.xml 166
+MD5 c1e7cf4f4f83a21c6734a497574be1a4 files/digest-xwrits-2.21 63
+RMD160 78b33d0936b83f228a1cdf18354add5aa0bdc5d8 files/digest-xwrits-2.21 63
+SHA256 5f13d4f3f7106304ea8a0f5152c43b902415470d30e4f8e66937bfe95650359f files/digest-xwrits-2.21 63
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.5 (GNU/Linux)
+
+iD8DBQFFOrgtvSApE0uP4UsRAn+zAJ9Saw9D8Avy2FatUM6p71vdx8FGGACfWzkG
+f0y8eCHQuF3q9gtQEV0HvDk=
+=y+Zs
+-----END PGP SIGNATURE-----
