@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/chgres
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/chgres/ChangeLog,v 1.9 2006/01/21 10:48:11 nelchael Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/chgres/ChangeLog,v 1.10 2006/10/22 00:11:42 omp Exp $
+
+  22 Oct 2006; David Shakaryan <omp@gentoo.org> chgres-0.1.ebuild:
+  Remove monolithic X from dependencies.
 
   21 Jan 2006; Krzysiek Pawlik <nelchael@gentoo.org> chgres-0.1.ebuild:
   Fixed DEPEND for modular X.
